--- a/embroidery-lib/Cargo.toml
+++ b/embroidery-lib/Cargo.toml
@@ -5,12 +5,12 @@ authors = ["Opal Symes <code@opal.codes>"]
 edition = "2018"
 
 [dependencies]
-euclid = "^0.18.2"
-failure = "^0.1"
-log = "^0.4"
-palette = "^0.4.1"
-unicode-segmentation = "^1.2"
-byteorder = "1"
+euclid = "0.22.9"
+failure = "0.1.8"
+log = "0.4.20"
+palette = "0.7.3"
+unicode-segmentation = "1.10.1"
+byteorder = "1.5.0"
 
 [dev-dependencies]
 proptest = "0.9.4"
